OYPD-627: Fixed messages for nodes

--- a/modules/openy_features/openy_location/modules/openy_loc_branch/config/install/core.entity_form_display.node.branch.default.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_branch/config/install/core.entity_form_display.node.branch.default.yml
@@ -263,7 +263,8 @@ content:
     type: language_select
     weight: 2
     region: content
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
   path:
     type: path
@@ -284,6 +285,13 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 122
+    third_party_settings: {  }
+    region: content
   sticky:
     type: boolean_checkbox
     settings:
