--- a/modules/openy_features/openy_location/modules/openy_loc_camp/config/install/core.entity_form_display.node.camp.default.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_camp/config/install/core.entity_form_display.node.camp.default.yml
@@ -102,6 +102,13 @@ targetEntityType: node
 bundle: camp
 mode: default
 content:
+  addthis:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 16
+    region: content
+    third_party_settings: {  }
   created:
     type: datetime_timestamp
     weight: 6
@@ -202,7 +209,8 @@ content:
     type: language_select
     weight: 2
     region: content
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
   path:
     type: path
@@ -223,6 +231,13 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 122
+    third_party_settings: {  }
+    region: content
   sticky:
     type: boolean_checkbox
     settings:
