--- a/modules/openy_features/openy_location/modules/openy_loc_facility/config/install/core.entity_form_display.node.facility.default.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_facility/config/install/core.entity_form_display.node.facility.default.yml
@@ -95,6 +95,13 @@ targetEntityType: node
 bundle: facility
 mode: default
 content:
+  addthis:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 16
+    region: content
+    third_party_settings: {  }
   created:
     type: datetime_timestamp
     weight: 6
@@ -200,7 +207,8 @@ content:
     type: language_select
     weight: 2
     region: content
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
   path:
     type: path
@@ -221,6 +229,13 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 122
+    third_party_settings: {  }
+    region: content
   sticky:
     type: boolean_checkbox
     settings:
