--- a/modules/openy_features/openy_node/modules/openy_node_category/config/install/core.entity_form_display.node.program_subcategory.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_category/config/install/core.entity_form_display.node.program_subcategory.default.yml
@@ -191,7 +191,8 @@ content:
     type: language_select
     weight: 2
     region: content
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
   path:
     type: path
@@ -217,6 +218,13 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 121
+    third_party_settings: {  }
+    region: content
   sticky:
     type: boolean_checkbox
     settings:
