--- a/modules/openy_features/openy_node/modules/openy_node_landing/config/install/core.entity_form_display.node.landing_page.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_landing/config/install/core.entity_form_display.node.landing_page.default.yml
@@ -74,6 +74,13 @@ targetEntityType: node
 bundle: landing_page
 mode: default
 content:
+  addthis:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 16
+    region: content
+    third_party_settings: {  }
   created:
     type: datetime_timestamp
     weight: 7
@@ -140,7 +147,8 @@ content:
     type: language_select
     weight: 2
     region: content
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
   path:
     type: path
@@ -163,6 +171,13 @@ content:
     region: content
   scheduler_settings:
     weight: 20
+    region: content
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 121
+    third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
