--- a/modules/openy_features/openy_node/modules/openy_node_program/config/install/core.entity_form_display.node.program.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_program/config/install/core.entity_form_display.node.program.default.yml
@@ -68,6 +68,13 @@ targetEntityType: node
 bundle: program
 mode: default
 content:
+  addthis:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 16
+    region: content
+    third_party_settings: {  }
   created:
     type: datetime_timestamp
     weight: 5
@@ -148,7 +155,8 @@ content:
     type: language_select
     weight: 2
     region: content
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
   path:
     type: path
@@ -171,6 +179,13 @@ content:
     region: content
   scheduler_settings:
     weight: 20
+    region: content
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 121
+    third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
