[YTCDN-55][YTCDN-61][YTCDN-64][YTCDN-70][YTCDN-71][YTCDN-72][YTCDN-74] various fixes for CDN, setup prod env

--- a/docroot/modules/custom/ymca_camp_du_nord/modules/ymca_cdn_sync/ymca_cdn_sync.services.yml
+++ b/docroot/modules/custom/ymca_camp_du_nord/modules/ymca_cdn_sync/ymca_cdn_sync.services.yml
@@ -37,3 +37,5 @@ services:
       - '@logger.channel.ymca_cdn_sync'
       - '@config.factory'
       - '@ymca_cdn_sync.wrapper'
+      - '@entity.query'
+      - '@entity_type.manager'
