--- a/docroot/modules/custom/ymca_camp_du_nord/config/install/ymca_camp_du_nord.settings.yml
+++ b/docroot/modules/custom/ymca_camp_du_nord/config/install/ymca_camp_du_nord.settings.yml
@@ -1,9 +1,9 @@
-wsdl: https://ygtctrain3ebiz.personifycloud.com/SSO/webservice/service.asmx?wsdl
+wsdl: https://***REMOVED***/SSO/webservice/service.asmx?wsdl
 vendor_id: 8
 vendor_username: ClockWork
 vendor_password: ***REMOVED***
 vendor_block: ***REMOVED***
-url_login: https://ygtctrain3ebiz.personifycloud.com/PersonifyEbusiness/Default.aspx?TabID=337
-url_account: https://ygtctrain3ebiz.personifycloud.com/personifyebusiness/MyY.aspx
-url_sign_out: https://ygtctrain3ebiz.personifycloud.com/personifyebusiness/MyY/tabid/61/ctl/Logoff/Default.aspx
-url_cart: https://ygtctrain3ebiz.personifycloud.com/PersonifyEbusiness/YMCA/ShoppingCart.aspx
+url_login: https://***REMOVED***/PersonifyEbusiness/Default.aspx?TabID=337
+url_account: https://***REMOVED***/personifyebusiness/MyY.aspx
+url_sign_out: https://***REMOVED***/personifyebusiness/MyY/tabid/61/ctl/Logoff/Default.aspx
+url_cart: https://***REMOVED***/PersonifyEbusiness/YMCA/ShoppingCart.aspx
