--- a/docroot/modules/custom/ymca_camp_du_nord/modules/ymca_cdn_sync/config/install/ymca_cdn_sync.settings.yml
+++ b/docroot/modules/custom/ymca_camp_du_nord/modules/ymca_cdn_sync/config/install/ymca_cdn_sync.settings.yml
@@ -1,3 +1,3 @@
-data_service_url: ""
-data_service_user: ""
-data_service_password: ""
+data_service_url: 'https://***REMOVED***/PersonifyDataServices/PersonifyData.svc'
+data_service_user: 'FFW17'
+data_service_password: 'Summer2017'
