--- a/docroot/modules/custom/ymca_camp_du_nord/config/install/ymca_camp_du_nord.settings.yml
+++ b/docroot/modules/custom/ymca_camp_du_nord/config/install/ymca_camp_du_nord.settings.yml
@@ -1,9 +1,9 @@
-wsdl: https://ygtctrain3ebiz.personifycloud.com/SSO/webservice/service.asmx?wsdl
+wsdl: https://account.ymcamn.org/SSO/webservice/service.asmx?wsdl
 vendor_id: 8
 vendor_username: ClockWork
 vendor_password: FE37C379FAD80A38E231D668DA572A24
 vendor_block: 55AADFF5C5741E09FE39D7E319B1A0DA
-url_login: https://ygtctrain3ebiz.personifycloud.com/PersonifyEbusiness/Default.aspx?TabID=337
-url_account: https://ygtctrain3ebiz.personifycloud.com/personifyebusiness/MyY.aspx
-url_sign_out: https://ygtctrain3ebiz.personifycloud.com/personifyebusiness/MyY/tabid/61/ctl/Logoff/Default.aspx
-url_cart: https://ygtctrain3ebiz.personifycloud.com/PersonifyEbusiness/YMCA/ShoppingCart.aspx
+url_login: https://account.ymcamn.org/PersonifyEbusiness/Default.aspx?TabID=337
+url_account: https://account.ymcamn.org/personifyebusiness/MyY.aspx
+url_sign_out: https://account.ymcamn.org/personifyebusiness/MyY/tabid/61/ctl/Logoff/Default.aspx
+url_cart: https://account.ymcamn.org/PersonifyEbusiness/YMCA/ShoppingCart.aspx
