--- a/themes/openy_themes/openy_lily/openy_lily.info.yml
+++ b/themes/openy_themes/openy_lily/openy_lily.info.yml
@@ -3,7 +3,7 @@ type: theme
 description: 'YMCA brand compliant and customizable.'
 package: OPENY_LILY
 core: 8.x
-base theme: openy_rose
+base theme: false
 libraries:
   - openy_lily/global-styling
 regions:
