Update paragraph configs to add the title field.

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_featured_news/config/install/core.entity_view_display.paragraph.featured_news.default.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_featured_news/config/install/core.entity_view_display.paragraph.featured_news.default.yml
@@ -18,6 +18,7 @@ content:
       link: false
     third_party_settings: {  }
     type: entity_reference_entity_view
+    region: content
   field_prgf_headline:
     weight: 0
     label: hidden
@@ -25,6 +26,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
 hidden:
   created: true
   uid: true
