--- a/modules/openy_features/openy_prgf/modules/openy_prgf_featured_news/config/install/core.entity_form_display.paragraph.featured_news.default.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_featured_news/config/install/core.entity_form_display.paragraph.featured_news.default.yml
@@ -18,15 +18,16 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
   field_prgf_headline:
     weight: 0
     settings:
       size: 60
-      placeholder: ''
+      placeholder: 'Provide title here'
     third_party_settings: {  }
     type: string_textfield
+    region: content
 hidden:
   created: true
-  field_fnews_posts: true
   status: true
   uid: true
