--- a/modules/openy_features/openy_prgf/modules/openy_prgf_news_camp/config/install/core.entity_view_display.paragraph.latest_news_posts_camp.default.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_news_camp/config/install/core.entity_view_display.paragraph.latest_news_posts_camp.default.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.latest_news_posts_camp.field_prgf_block
+    - field.field.paragraph.latest_news_posts_camp.field_prgf_title
     - paragraphs.paragraphs_type.latest_news_posts_camp
   module:
     - plugin
@@ -12,11 +13,19 @@ bundle: latest_news_posts_camp
 mode: default
 content:
   field_prgf_block:
-    weight: 0
+    weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: plugin_block_built
+    region: content
+  field_prgf_title:
+    weight: 0
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
 hidden:
   created: true
