--- a/modules/openy_features/openy_prgf/modules/openy_prgf_news_latest/config/install/core.entity_view_display.paragraph.latest_news_posts.default.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_news_latest/config/install/core.entity_view_display.paragraph.latest_news_posts.default.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.latest_news_posts.field_prgf_block
+    - field.field.paragraph.latest_news_posts.field_prgf_title
     - paragraphs.paragraphs_type.latest_news_posts
   module:
     - plugin
@@ -17,6 +18,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: plugin_block_built
+    region: content
+  field_prgf_title:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
 hidden:
   created: true
   uid: true
