--- a/modules/openy_features/openy_prgf/modules/openy_prgf_news_listing/config/install/core.entity_form_display.paragraph.news_posts_listing.default.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_news_listing/config/install/core.entity_form_display.paragraph.news_posts_listing.default.yml
@@ -3,12 +3,21 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.news_posts_listing.field_prgf_block
+    - field.field.paragraph.news_posts_listing.field_prgf_title
     - paragraphs.paragraphs_type.news_posts_listing
 id: paragraph.news_posts_listing.default
 targetEntityType: paragraph
 bundle: news_posts_listing
 mode: default
-content: {  }
+content:
+  field_prgf_title:
+    weight: 0
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
 hidden:
   created: true
   field_prgf_block: true
