Update Editor role permissions

--- a/modules/openy_features/openy_user/config/install/user.role.editor.yml
+++ b/modules/openy_features/openy_user/config/install/user.role.editor.yml
@@ -35,6 +35,7 @@ permissions:
   - 'create landing_page content'
   - 'create media'
   - 'create membership content'
+  - 'create news content'
   - 'create program content'
   - 'create program_subcategory content'
   - 'delete any alert content'
@@ -66,6 +67,7 @@ permissions:
   - 'delete terms in color'
   - 'delete terms in facility_type'
   - 'delete terms in media_tags'
+  - 'delete terms in news_category'
   - 'dropzone upload files'
   - 'edit any alert content'
   - 'edit any announcement content'
@@ -88,6 +90,7 @@ permissions:
   - 'edit own facility content'
   - 'edit own landing_page content'
   - 'edit own membership content'
+  - 'edit own news content'
   - 'edit own program content'
   - 'edit own program_subcategory content'
   - 'edit terms in area'
@@ -95,6 +98,7 @@ permissions:
   - 'edit terms in color'
   - 'edit terms in facility_type'
   - 'edit terms in media_tags'
+  - 'edit terms in news_category'
   - 'rabbit hole bypass node'
   - 'revert alert revisions'
   - 'revert all revisions'
@@ -152,6 +156,7 @@ permissions:
   - 'view media'
   - 'view membership revisions'
   - 'view moderation states'
+  - 'view news revisions'
   - 'view own unpublished content'
   - 'view program revisions'
   - 'view program_subcategory revisions'
