Updating program teaser image style and adjusting blog tiles to match

--- a/modules/openy_features/openy_node/modules/openy_node_category/openy_node_category.info.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_category/openy_node_category.info.yml
@@ -10,6 +10,7 @@ dependencies:
   - entity_reference_revisions
   - field
   - field_group
+  - focal_point
   - image
   - media_entity
   - menu_ui
