--- a/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_form_display.node.campaign.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_form_display.node.campaign.default.yml
@@ -23,6 +23,7 @@ dependencies:
     - field.field.node.campaign.field_campaign_reg_end_date
     - field.field.node.campaign.field_campaign_reg_start_date
     - field.field.node.campaign.field_campaign_start_date
+    - field.field.node.campaign.field_campaign_timezone
     - field.field.node.campaign.field_campaign_winners_prizes
     - field.field.node.campaign.field_enable_visits_goal
     - field.field.node.campaign.field_error_default
@@ -56,6 +57,7 @@ dependencies:
     - paragraphs
     - path
     - text
+    - tzfield
 third_party_settings:
   field_group:
     group_target_audience_settings:
@@ -92,6 +94,7 @@ third_party_settings:
         - field_campaign_reg_end_date
         - field_campaign_start_date
         - field_campaign_end_date
+        - field_campaign_timezone
       parent_name: ''
       weight: 11
       format_type: fieldset
@@ -203,7 +206,7 @@ third_party_settings:
         - field_ways_to_earn_entries
         - field_flip_cards_cover_image
       parent_name: ''
-      weight: 17
+      weight: 18
       format_type: details
       format_settings:
         id: ''
@@ -265,7 +268,7 @@ content:
     type: options_buttons
     region: content
   field_campaign_end_date:
-    weight: 6
+    weight: 20
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
@@ -316,7 +319,7 @@ content:
     type: image_image
     region: content
   field_campaign_membership_u_t:
-    weight: 15
+    weight: 14
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
@@ -331,7 +334,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_campaign_payment_types:
-    weight: 16
+    weight: 15
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
@@ -365,21 +368,27 @@ content:
     region: content
   field_campaign_reg_end_date:
     type: datetime_default
-    weight: 4
+    weight: 18
     region: content
     settings: {  }
     third_party_settings: {  }
   field_campaign_reg_start_date:
     type: datetime_default
-    weight: 3
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
   field_campaign_start_date:
-    weight: 5
+    weight: 19
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
+    region: content
+  field_campaign_timezone:
+    weight: 21
+    settings: {  }
+    third_party_settings: {  }
+    type: tzfield_default
     region: content
   field_campaign_winners_prizes:
     type: entity_reference_paragraphs
