YM-55: Adds tzfield to composer.json.
Campaigns now are restricted by a selectable timezone, they require the tzfield.

--- a/composer.json
+++ b/composer.json
@@ -234,6 +234,7 @@
         "drupal/views_data_export": "^1.0@alpha",
         "drupal/views_field_formatter": "1.5",
         "drupal/lndr": "1.0",
-        "doctrine/inflector": "1.1.*"
+        "doctrine/inflector": "1.1.*",
+        "drupal/tzfield": "1.x-dev"
     }
 }
