#595 Restore paragraph name for local video paragraph

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_video_player/config/install/paragraphs.paragraphs_type.video_player.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_video_player/config/install/paragraphs.paragraphs_type.video_player.yml
@@ -2,4 +2,4 @@ langcode: en
 status: true
 dependencies: {  }
 id: video_player
-label: 'Video player for local video asset (Dallas)'
+label: 'Video player for local video asset'
