--- a/openy.info.yml
+++ b/openy.info.yml
@@ -96,11 +96,15 @@ dependencies:
   - lndr
   - crop
   - focal_point
+  - videojs
+  - video
+  - media_entity_video
   # OpenY features.
   - openy_svg_formatter
   - openy_media_image
   - openy_media_document
   - openy_media_video
+  - openy_media_local_video
   - openy_node_mbrshp
   - openy_node
   - openy_block
@@ -150,6 +154,7 @@ dependencies:
   - openy_prgf_embedded_groupexpro_schedule
   - openy_prgf_pgm_reg
   - openy_prgf_webform
+  - openy_prgf_video_player
   - openy_node_activity
   - openy_node_class
   - openy_node_session
