--- a/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/media_entity.bundle.video_local.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/media_entity.bundle.video_local.yml
@@ -9,7 +9,7 @@ third_party_settings:
     image_field: null
 id: video_local
 label: 'Local Video'
-description: 'Local video'
+description: 'Use Local Video for uploading locally hosted videos.'
 type: video
 queue_thumbnail_downloads: false
 new_revision: false
