--- a/modules/openy_features/openy_prgf/modules/openy_prgf_video_player/openy_prgf_video_player.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_video_player/openy_prgf_video_player.info.yml
@@ -1,7 +1,8 @@
-name: 'OpenY paragraph video player'
-description: 'OpenY paragraph video player'
+name: 'OpenY Paragraph Video Player'
+description: 'OpenY Paragraph Video Player'
 type: module
 core: 8.x
+package: OpenY
 dependencies:
   - datalayer
   - field
