YM-60 Stream for Instant Game winners and Visit Goal achieved members

--- a/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/field.field.node.campaign.field_campaign_stream_type.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/field.field.node.campaign.field_campaign_stream_type.yml
@@ -16,7 +16,7 @@ field_name: field_campaign_stream_type
 entity_type: node
 bundle: campaign
 label: 'Winner Stream Type'
-description: ''
+description: 'Choose "- None -" to hide Winners Stream'
 required: false
 translatable: false
 default_value:
